# sentient

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit.yml
data/: README.md
data/surgical-skill-assessment/: README.md
dependencies/: README.md  no-gpu-ve.yml  packages_versions.py  ve-no-gpu.yml  ve.yml
dependencies/openzen/: README.md  hello-multi-sensors.py  hello-sensor.py  openzen.pyd
dependencies/openzen/cpp_examples/: CMakeLists.txt  README.md  example-cpp14.cpp  example-cpp17.cpp
docs/: README.md
docs/posters/: README.md
docs/references/: README.md  references.bib
docs/tex/: README.md  main.tex
notebooks/data_analysis/: A_preprocessing_data_from_multiple-files.ipynb  A_preprocessing_data_from_multiple-files.py  B_analysis_of_pre-processed_data_from_multiple_files_plotting.ipynb
notebooks/models/: README.md
rtt4ssa/: README.md
rtt4ssa/data_analysis/: A_analysis_of_data_from_multiple-files.ipynb  A_preprocessing_data_from_multiple-files.ipynb  A_preprocessing_data_from_multiple-files.py  Analysis_of_video_image_cropping_texture_features.ipynb  B_analysis_of_data_from_multiple_files_plotting.ipynb  B_analysis_of_pre-processed_data_from_multiple_files_plotting.ipynb  README.md  analysis_of_data_from_multiple-files.ipynb  analysis_of_data_from_multiple_files_plotting.ipynb  analysis_of_demo-data_from_multiple-files-p01.ipynb  analysis_of_demo-data_from_multiple-files-p02.ipynb  analysis_of_demo-data_from_multiple-files.ipynb  analysis_of_video_image_cropping_texture_features.ipynb
rtt4ssa/models/: README.md
rtt4ssa/sensor_fusion/: README.md  video_usb_2imus_bluetooth.py  video_usb_imu_bluetooth.py
rtt4ssa/usb_endoscope/: README.md
rtt4ssa/utils/: __init__.py  utils.py
scripts/: README.md
scripts/data-analysis/: README.md  analysis_of_video_image_cropping_texture_features.ipynb
scripts/data_analysis/: README.md  analysis_of_data_from_multiple-files.ipynb  analysis_of_video_image_cropping_texture_features.ipynb
scripts/sensor-fusion/: README.md  video-usb-imu-bluetooth.py
scripts/sensor_fusion/: README.md  (+1 more)
sentient/: README.md
tests/: .pylintrc  test_package_versions.py  test_video_capture.py
(+66 files in other folders)
